Change date div class to include 'tag'

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <h3>Google UX Design Professional Certificate</h3>
               <div class="place">Google</div>
             </div>
-            <div class="date">Complete</div>
+            <div class="date tag">Complete</div>
           </div>
         </article>
       </div>
