--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           <h1 class="title">Seyed Sadiq Nezhadi</h1>
           <p class="subtitle">Student at University of Toronto | Co-founder of noor-apparel</p>
           <p class="lead">
-            I’m an aspiring creative technologist focused on generative AI, visual design, and user experience. 
+            I’m an aspiring creative technologist focused on generative AI, visual design, and user experience.
+            I’m also the co-founder of Noor Apparel, an Islamic-inspired streetwear brand where I led the creation of the website, managed 
+            product planning and marketing, and oversaw the overall brand direction.
             Currently, I’ve interned at Meshkat Partners, where I trained LoRAs using Stable Diffusion to create interactive 3D characters 
             and immersive visual products.
           </p>
