--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Seyed Sadiq Nezhadi — Portfolio</title>
+  <title>Seyed Sadiq Nezhadi — </title>
   <meta name="description" content="Portfolio and resume of Seyed Sadiq Nezhadi." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
