--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Seyed Sadiq Nezhadi — </title>
-  <meta name="description" content="Portfolio and resume of Seyed Sadiq Nezhadi." />
+  <meta name="description" content="CV of Seyed Sadiq Nezhadi." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
   <header class="site-header">
     <div class="container nav">
-      <div class="brand">Portfolio</div>
+      <div class="brand"></div>
       <nav>
         <a href="#home">Home</a>
         <a href="#experience">Experience</a>
