--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="hero-copy">
           <h1 class="title">Seyed Sadiq Nezhadi</h1>
-          <p class="subtitle">Student at University of Toronto | Co-founder of noor-apparel</p>
+          <p class="subtitle">Second Year Student at University of Toronto | Co-founder of noor-apparel</p>
           <p class="lead">
             I’m an aspiring creative technologist focused on generative AI, visual design, and user experience.
             I’m also the co-founder of Noor Apparel, an Islamic-inspired streetwear brand where I led the creation of the website, managed 
@@ -136,6 +136,7 @@
               <span>Design</span>
               <span>Python</span>
               <span>Figma</span>
+              <span>SQL</span>
               <span>Photoshop</span>
               <span>Illustrator</span>
               <span>AutoCAD</span>
