Correct capitalization of 'Noor Apparel' in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="hero-copy">
           <h1 class="title">Seyed Sadiq Nezhadi</h1>
-          <p class="subtitle">Second Year Student at University of Toronto | Co-founder of noor-apparel</p>
+          <p class="subtitle">Second Year Student at University of Toronto | Co-founder of Noor Apparel</p>
           <p class="lead">
             I’m an aspiring creative technologist focused on generative AI, visual design, and user experience.
             I’m also the co-founder of Noor Apparel, an Islamic-inspired streetwear brand where I led the creation of the website, managed 
@@ -66,7 +66,7 @@
           <div class="card-head">
             <div>
               <h3>Co-founder</h3>
-              <div class="place">noor-apparel</div>
+              <div class="place">Noor Apparel</div>
             </div>
             <div class="date">Sep 2025 – Present</div>
           </div>
