--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Seyed Sadiq Nezhadi</title>
-  <meta name="description" content="CV of Seyed Sadiq Nezhadi." />
+  <meta name="description" content="CV and Portfolio of Seyed Sadiq Nezhadi." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -51,6 +51,9 @@
             </a>
             <a class="btn secondary" href="assets/CV.pdf" download aria-label="CV">
               <span>CV</span>
+            </a>
+            <a class="btn secondary" href="assets/CV_Portfolio.pdf" download aria-label="Portfolio">
+              <span>Portfolio</span>
             </a>
           </div>
         </div>
